# FileShare

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: heroku-push  heroku-push.yml  pages.yml
backend/: .dockerignore  .env.development  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  test.db
backend/src/fileshare/: config.py  constants.py  main.py  schemas.py
backend/src/fileshare/auth/: constants.py  models.py  permissions.py  repositories.py  routes.py  schemas.py  service.py  utils.py
backend/src/fileshare/database/: config.py  core.py
backend/src/fileshare/database/alembic/: env.py
backend/src/fileshare/database/alembic/versions/: 0fc40cabbad1_model_init_sqlite.py  3a0a91df76e1_added_token_table_v3.py  59fcfb9226bd_model_init.py  67fcddd65326_model_init.py  d758421094f8_model_init.py
backend/src/fileshare/files/: constants.py  models.py  repositories.py  routes.py  schemas.py  service.py
backend/src/fileshare/security/: config.py  models.py  repositories.py  schemas.py  service.py  utils.py
backend/src/fileshare/storage/: config.py  core.py  utils.py
backend/src/tests/: conftest.py
frontend/: .dockerignore  .env  Dockerfile  nginx.conf  package-lock.json  package.json  start-nginx.sh  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts  vite-env.d.ts
frontend/src/api/: api.ts
frontend/src/components/: FileUploadPopUp.tsx  Footer.tsx  Navbar.tsx  ProtectedRoute.tsx  UserPermissionPopUp.tsx
frontend/src/pages/: AdminPage.tsx  FilesPage.tsx  Login.tsx  Main.tsx  RegistrationSuccessPage.tsx  Signup.tsx  (+1 more)
