[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dmytro Shlapak <bdlap.shl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
